--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 //Do not include any CSS in this document, otherwise it will be duplicated each time this is imported
 //-------------------------------------------------------------------------------------------------//
 
-//Colors -- Do not reference these directly
+//Colors
 $brand-primary: #4484ce;
 $brand-secondary: #f19f4d;
 $brand-tertiary: #f9cf00;
