--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -1,2 +1,5 @@
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
 @import 'variables';
 @import 'mixins';
